--- a/Relazione/relazione.tex
+++ b/Relazione/relazione.tex
@@ -56,9 +56,6 @@
     \end{figure}
     
     \newpage
-    \noindent Il modello parte da una classe astratta “sensor” che contiene le informazioni comuni a tutti i tipi di sensori, quali:
-    \begin{itemize}
-        \item \textbf{ID} 
-        \item \textbf{Nome}
-    \end{itemize} 
+    \noindent Il modello parte da una classe astratta “sensor” che contiene le informazioni comuni a tutti i tipi di sensori, quali: ID e nome.
+    
 \end{document}
